// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmazonTemplateProcessor Snapshots Decision One-Pager Template Snapshots should generate consistent Decision One-Pager output with fixed seed: decision-onepager-fixed-seed 1`] = `
"---
title: "Decision One-Pager — AI-Powered Analytics Platform"
artifact_type: decision_onepager
created_at: "2024-01-15T10:30:00.000Z"
inputs_hash: "fixed-seed-hash-12345abcdef67890"
profile: "amazon"
confidence:
  total: 84
  breakdown: {"evidence":88,"recency":82,"diversity":79,"agreement":91,"coverage":92,"sensitivity":76}
assumptions:
  ids: ["A1","A2","A3","A4"]
  coverage_pct: 92
scenarios:
  pct: 20
  metrics: ["Development Investment","Annual Revenue","Customer Count","ROI","Payback Period"]
paths:
  assumptions_json: "./attachments/assumptions-fixed123.json"
  citations_json: "./attachments/citations-fixed123.json"
  scenarios_json: "./attachments/scenarios-fixed123.json"
---

# Decision One-Pager — AI-Powered Analytics Platform

## Context

Mid-Market SaaS Companies face the critical challenge of struggle with fragmented data insights and manual reporting processes. Market analysis shows significant opportunity with 84% confidence in our assessment. Key assumptions include A1, A2, A3 with 92% coverage.

## Options Considered

| Option | Pros | Cons | Investment | Timeline |
|--------|------|------|------------|----------|
| **Status Quo** | No investment required | Problem persists, competitive disadvantage | $0 | N/A |
| **AI-Powered Analytics Platform (Recommended)** | Significant business value, first-mover advantage | Development investment, market risk | High | 6 months |
| **Partner Solution** | Faster time-to-market | Limited control, revenue sharing | Medium | 3 months |

## ROI Range

| Scenario | Investment | Revenue | ROI | Confidence |
|----------|------------|---------|-----|------------|
| Bear | $500K | $1.2M | 140% | Low |
| **Base** | **$750K** | **$2.1M** | **180%** | Medium |
| Bull | $1M | $3.5M | 250% | High |

**Key Sensitivities:**
- Average Deal Size ±20% → Annual Revenue ±18%
- Market Growth Rate ±20% → Customer Count ±22%
- Customer Churn Rate ±20% → ROI ±12%

## Risks & Blast Radius

| Risk | Probability | Impact | Owner | Mitigation |
|------|-------------|--------|-------|------------|
| Market adoption slower than expected | Medium | High | Product | Phased rollout, early feedback |
| Competitive response | High | Medium | Strategy | IP protection, speed advantage |
| Technical complexity | Low | High | Engineering | Proven architecture, testing |

**Blast Radius:** Limited to Mid-Market SaaS Companies segment, rollback possible within 30 days

## Recommendation

**Decision:** GO  
**Confidence:** 84%

**Rationale:** High-quality evidence with strong source agreement and excellent coverage. Minor concerns around sensitivity to market changes. Market timing and competitive positioning create unique opportunity.

**Disconfirming Signals:**
- Customer adoption <50% of projections in first 60 days
- Competitive response within 90 days
- Technical issues affecting >10% of users

**Signal Owners:**
- Adoption metrics: Product Manager
- Competitive intelligence: Strategy Team
- Technical health: Engineering Manager

## Evidence Mechanisms

### Assumption Ledger

| ID | Name | Value | Certainty | Sources |
|----|------|-------|-----------|---------|
| A1 | Total Addressable Market | $1.8B | High | 1 |
| A2 | Average Deal Size | 25000 | Medium | 1 |
| A3 | Market Growth Rate | 23 | High | 1 |
| A4 | Customer Churn Rate | 8 | Medium | 1 |

**Coverage:** 92% of claims backed by documented assumptions

### Confidence Score

**Overall Confidence:** 84/100

**Breakdown:**
- Evidence Quality: 88/100
- Data Recency: 82/100
- Source Diversity: 79/100
- Source Agreement: 91/100
- Assumption Coverage: 92/100
- Sensitivity Risk: 76/100



### Scenario Analysis

| Metric | Bear | Base | Bull | Unit |
|--------|------|------|------|------|
| Development Investment | $800K | **$1.2M** | $1.8M | USD |
| Annual Revenue | $2.4M | **$4.2M** | $7.1M | USD |
| Customer Count | 96 | **168** | 284 | customers |
| ROI | 200% | **250%** | 295% | % |
| Payback Period | 18 | **12** | 8 | months |

### Hard Questions


**Q1:** How will the recent economic downturn affect our $1.8B TAM assumption, especially given enterprise budget freezes?  
*Targets: A1, A3 | Severity: critical*


**Q2:** What if competitors like Mixpanel reduce pricing by 30% to defend market share?  
*Targets: A2 | Severity: important*


**Q3:** Can we realistically achieve 8% churn when industry average is 12% for new products?  
*Targets: A4 | Severity: important*



### Citations

1. [Analytics and Business Intelligence Market Forecast 2024-2026](https://research.gartner.com/analytics-market-2024) - industry_report (A)
2. [SaaS Sales Benchmarks Report 2024](https://salesforce.com/saas-benchmarks) - industry_report (A)
3. [IDC Analytics Platform Growth Projections](https://idc.com/analytics-growth-forecast) - research (A)
4. [SaaS Churn Rate Benchmarks by Industry](https://recurly.com/churn-benchmarks) - industry_report (B)
"
`;

exports[`AmazonTemplateProcessor Snapshots Decision One-Pager Template Snapshots should generate identical Decision One-Pager output on multiple runs: decision-onepager-deterministic 1`] = `
"---
title: "Decision One-Pager — AI-Powered Analytics Platform"
artifact_type: decision_onepager
created_at: "2024-01-15T10:30:00.000Z"
inputs_hash: "fixed-seed-hash-12345abcdef67890"
profile: "amazon"
confidence:
  total: 84
  breakdown: {"evidence":88,"recency":82,"diversity":79,"agreement":91,"coverage":92,"sensitivity":76}
assumptions:
  ids: ["A1","A2","A3","A4"]
  coverage_pct: 92
scenarios:
  pct: 20
  metrics: ["Development Investment","Annual Revenue","Customer Count","ROI","Payback Period"]
paths:
  assumptions_json: "./attachments/assumptions-fixed123.json"
  citations_json: "./attachments/citations-fixed123.json"
  scenarios_json: "./attachments/scenarios-fixed123.json"
---

# Decision One-Pager — AI-Powered Analytics Platform

## Context

Mid-Market SaaS Companies face the critical challenge of struggle with fragmented data insights and manual reporting processes. Market analysis shows significant opportunity with 84% confidence in our assessment. Key assumptions include A1, A2, A3 with 92% coverage.

## Options Considered

| Option | Pros | Cons | Investment | Timeline |
|--------|------|------|------------|----------|
| **Status Quo** | No investment required | Problem persists, competitive disadvantage | $0 | N/A |
| **AI-Powered Analytics Platform (Recommended)** | Significant business value, first-mover advantage | Development investment, market risk | High | 6 months |
| **Partner Solution** | Faster time-to-market | Limited control, revenue sharing | Medium | 3 months |

## ROI Range

| Scenario | Investment | Revenue | ROI | Confidence |
|----------|------------|---------|-----|------------|
| Bear | $500K | $1.2M | 140% | Low |
| **Base** | **$750K** | **$2.1M** | **180%** | Medium |
| Bull | $1M | $3.5M | 250% | High |

**Key Sensitivities:**
- Average Deal Size ±20% → Annual Revenue ±18%
- Market Growth Rate ±20% → Customer Count ±22%
- Customer Churn Rate ±20% → ROI ±12%

## Risks & Blast Radius

| Risk | Probability | Impact | Owner | Mitigation |
|------|-------------|--------|-------|------------|
| Market adoption slower than expected | Medium | High | Product | Phased rollout, early feedback |
| Competitive response | High | Medium | Strategy | IP protection, speed advantage |
| Technical complexity | Low | High | Engineering | Proven architecture, testing |

**Blast Radius:** Limited to Mid-Market SaaS Companies segment, rollback possible within 30 days

## Recommendation

**Decision:** GO  
**Confidence:** 84%

**Rationale:** High-quality evidence with strong source agreement and excellent coverage. Minor concerns around sensitivity to market changes. Market timing and competitive positioning create unique opportunity.

**Disconfirming Signals:**
- Customer adoption <50% of projections in first 60 days
- Competitive response within 90 days
- Technical issues affecting >10% of users

**Signal Owners:**
- Adoption metrics: Product Manager
- Competitive intelligence: Strategy Team
- Technical health: Engineering Manager

## Evidence Mechanisms

### Assumption Ledger

| ID | Name | Value | Certainty | Sources |
|----|------|-------|-----------|---------|
| A1 | Total Addressable Market | $1.8B | High | 1 |
| A2 | Average Deal Size | 25000 | Medium | 1 |
| A3 | Market Growth Rate | 23 | High | 1 |
| A4 | Customer Churn Rate | 8 | Medium | 1 |

**Coverage:** 92% of claims backed by documented assumptions

### Confidence Score

**Overall Confidence:** 84/100

**Breakdown:**
- Evidence Quality: 88/100
- Data Recency: 82/100
- Source Diversity: 79/100
- Source Agreement: 91/100
- Assumption Coverage: 92/100
- Sensitivity Risk: 76/100



### Scenario Analysis

| Metric | Bear | Base | Bull | Unit |
|--------|------|------|------|------|
| Development Investment | $800K | **$1.2M** | $1.8M | USD |
| Annual Revenue | $2.4M | **$4.2M** | $7.1M | USD |
| Customer Count | 96 | **168** | 284 | customers |
| ROI | 200% | **250%** | 295% | % |
| Payback Period | 18 | **12** | 8 | months |

### Hard Questions


**Q1:** How will the recent economic downturn affect our $1.8B TAM assumption, especially given enterprise budget freezes?  
*Targets: A1, A3 | Severity: critical*


**Q2:** What if competitors like Mixpanel reduce pricing by 30% to defend market share?  
*Targets: A2 | Severity: important*


**Q3:** Can we realistically achieve 8% churn when industry average is 12% for new products?  
*Targets: A4 | Severity: important*



### Citations

1. [Analytics and Business Intelligence Market Forecast 2024-2026](https://research.gartner.com/analytics-market-2024) - industry_report (A)
2. [SaaS Sales Benchmarks Report 2024](https://salesforce.com/saas-benchmarks) - industry_report (A)
3. [IDC Analytics Platform Growth Projections](https://idc.com/analytics-growth-forecast) - research (A)
4. [SaaS Churn Rate Benchmarks by Industry](https://recurly.com/churn-benchmarks) - industry_report (B)
"
`;

exports[`AmazonTemplateProcessor Snapshots Evidence Mechanism Snapshots should generate consistent ROI table: roi-table 1`] = `
"| Scenario | Investment | Revenue | ROI | Confidence |
|----------|------------|---------|-----|------------|
| Bear | $500K | $1.2M | 140% | Low |
| **Base** | **$750K** | **$2.1M** | **180%** | Medium |
| Bull | $1M | $3.5M | 250% | High |"
`;

exports[`AmazonTemplateProcessor Snapshots Evidence Mechanism Snapshots should generate consistent assumption table: assumption-table 1`] = `
"| ID | Name | Value | Certainty | Sources |
|----|------|-------|-----------|---------|
| A1 | Total Addressable Market | $1.8B | High | 1 |
| A2 | Average Deal Size | 25000 | Medium | 1 |
| A3 | Market Growth Rate | 23 | High | 1 |
| A4 | Customer Churn Rate | 8 | Medium | 1 |"
`;

exports[`AmazonTemplateProcessor Snapshots Evidence Mechanism Snapshots should generate consistent citations list: citations-list 1`] = `
"1. [Analytics and Business Intelligence Market Forecast 2024-2026](https://research.gartner.com/analytics-market-2024) - industry_report (A)
2. [SaaS Sales Benchmarks Report 2024](https://salesforce.com/saas-benchmarks) - industry_report (A)
3. [IDC Analytics Platform Growth Projections](https://idc.com/analytics-growth-forecast) - research (A)
4. [SaaS Churn Rate Benchmarks by Industry](https://recurly.com/churn-benchmarks) - industry_report (B)"
`;

exports[`AmazonTemplateProcessor Snapshots Evidence Mechanism Snapshots should generate consistent scenario table: scenario-table 1`] = `
"| Metric | Bear | Base | Bull | Unit |
|--------|------|------|------|------|
| Development Investment | $800K | **$1.2M** | $1.8M | USD |
| Annual Revenue | $2.4M | **$4.2M** | $7.1M | USD |
| Customer Count | 96 | **168** | 284 | customers |
| ROI | 200% | **250%** | 295% | % |
| Payback Period | 18 | **12** | 8 | months |"
`;

exports[`AmazonTemplateProcessor Snapshots Evidence Mechanism Snapshots should generate consistent sensitivities: top-sensitivities 1`] = `
"- Average Deal Size ±20% → Annual Revenue ±18%
- Market Growth Rate ±20% → Customer Count ±22%
- Customer Churn Rate ±20% → ROI ±12%"
`;

exports[`AmazonTemplateProcessor Snapshots PR/FAQ Template Snapshots should generate consistent PR/FAQ output with fixed seed: pr-faq-fixed-seed 1`] = `
"---
title: "PR/FAQ — AI-Powered Analytics Platform"
artifact_type: pr_faq
created_at: "2024-01-15T10:30:00.000Z"
inputs_hash: "fixed-seed-hash-12345abcdef67890"
profile: "amazon"
confidence:
  total: 84
  breakdown: {"evidence":88,"recency":82,"diversity":79,"agreement":91,"coverage":92,"sensitivity":76}
assumptions:
  ids: ["A1","A2","A3","A4"]
  coverage_pct: 92
scenarios:
  pct: 20
  metrics: ["Development Investment","Annual Revenue","Customer Count","ROI","Payback Period"]
paths:
  assumptions_json: "./attachments/assumptions-fixed123.json"
  citations_json: "./attachments/citations-fixed123.json"
  scenarios_json: "./attachments/scenarios-fixed123.json"
---

# PR/FAQ — AI-Powered Analytics Platform

## Press Release

**FOR IMMEDIATE RELEASE**

**AI-Powered Analytics Platform Launches to Transform Mid-Market SaaS Companies Experience**

*Revolutionary solution addresses critical market need with proven ROI*

**North America — [Future Date]** — Today we announced the launch of AI-Powered Analytics Platform, a breakthrough solution designed specifically for Mid-Market SaaS Companies. This innovative platform addresses the critical challenge of struggle with fragmented data insights and manual reporting processes while delivering Significant business value.

"AI-Powered Analytics Platform represents a fundamental shift in how Mid-Market SaaS Companies can Launch AI-Powered Analytics Platform for Mid-Market SaaS Companies," said [Product Leader]. "Our customers will see within 90 days and experience immediate value through our unique approach."

The solution will be available starting [Launch Date] with initial rollout to select customers.

### Why Now

Market conditions are optimal with 84% confidence in our analysis. Key market drivers include:

- Growing demand for efficient solutions
- Technology platform readiness
- Competitive landscape gaps

### Customer Problem

Mid-Market SaaS Companies currently face significant challenges with struggle with fragmented data insights and manual reporting processes. Our research shows:

- 67% report inefficiencies in current processes
- Average time-to-value exceeds 6 months
- Limited integration capabilities with existing systems

### Solution Overview

AI-Powered Analytics Platform provides:


- Core AI-Powered Analytics Platform functionality

- Integrated analytics and reporting

- Seamless user experience


**First Run Experience:** Initial AI-Powered Analytics Platform experience with core functionality

**Key Guardrails:**

- Performance monitoring and alerts

- User feedback collection

- Rollback procedures


### Success Metrics

**North Star Metric:** Monthly Active Users  
**Target:** 10,000 by 2026-03-09

**Leading Indicators:**
- User engagement rate
- Feature adoption
- Customer satisfaction score

## Frequently Asked Questions

### Q1: How does this compare to existing solutions?

Current solutions from Mixpanel, Amplitude, Segment lack key capabilities. Our unique approach provides integrated capabilities that competitors cannot match.

### Q2: What's the expected ROI?

Based on our analysis, customers can expect Significant business value with scenarios ranging from our bear case to bull case projections.

### Q3: How long until customers see value?

Customers typically see initial value within 90 days with full benefits realized within 6 months.

### Q4: What are the main risks?

Key risks include market adoption timing and competitive response. We have mitigation strategies for each identified risk.

### Q5: Why is this the right time?

Platform readiness and market timing create a unique opportunity window. Market conditions and customer readiness align perfectly with our launch timeline.

## Risks & Mitigations

**Market Risk:** Slower than expected adoption  
**Mitigation:** Phased rollout with early customer feedback

**Competitive Risk:** Fast follower response  
**Mitigation:** Strong IP position and first-mover advantage

**Technical Risk:** Integration complexity  
**Mitigation:** Proven architecture and extensive testing

## Evidence Mechanisms

### Assumption Ledger

| ID | Name | Value | Certainty | Sources |
|----|------|-------|-----------|---------|
| A1 | Total Addressable Market | $1.8B | High | 1 |
| A2 | Average Deal Size | 25000 | Medium | 1 |
| A3 | Market Growth Rate | 23 | High | 1 |
| A4 | Customer Churn Rate | 8 | Medium | 1 |

**Coverage:** 92% of claims backed by documented assumptions

### Confidence Score

**Overall Confidence:** 84/100

**Breakdown:**
- Evidence Quality: 88/100
- Data Recency: 82/100
- Source Diversity: 79/100
- Source Agreement: 91/100
- Assumption Coverage: 92/100
- Sensitivity Risk: 76/100

**Explanation:** High-quality evidence with strong source agreement and excellent coverage. Minor concerns around sensitivity to market changes.



### Scenario Range

| Metric | Bear | Base | Bull | Unit |
|--------|------|------|------|------|
| Development Investment | $800K | **$1.2M** | $1.8M | USD |
| Annual Revenue | $2.4M | **$4.2M** | $7.1M | USD |
| Customer Count | 96 | **168** | 284 | customers |
| ROI | 200% | **250%** | 295% | % |
| Payback Period | 18 | **12** | 8 | months |

**Key Sensitivities:**

- Average Deal Size ±20% → Annual Revenue ±18%

- Market Growth Rate ±20% → Customer Count ±22%

- Customer Churn Rate ±20% → ROI ±12%


### Hard Questions


**Q1:** How will the recent economic downturn affect our $1.8B TAM assumption, especially given enterprise budget freezes?  
*Targets: A1, A3 | Severity: critical*

Evidence needed: Q4 2023 enterprise spending data, Updated market research, Customer budget surveys


**Q2:** What if competitors like Mixpanel reduce pricing by 30% to defend market share?  
*Targets: A2 | Severity: important*

Evidence needed: Competitive pricing intelligence, Value proposition differentiation analysis


**Q3:** Can we realistically achieve 8% churn when industry average is 12% for new products?  
*Targets: A4 | Severity: important*

Evidence needed: Customer success benchmarks, Product stickiness analysis, Onboarding effectiveness data



### Citations

1. [Analytics and Business Intelligence Market Forecast 2024-2026](https://research.gartner.com/analytics-market-2024) - industry_report (A)
2. [SaaS Sales Benchmarks Report 2024](https://salesforce.com/saas-benchmarks) - industry_report (A)
3. [IDC Analytics Platform Growth Projections](https://idc.com/analytics-growth-forecast) - research (A)
4. [SaaS Churn Rate Benchmarks by Industry](https://recurly.com/churn-benchmarks) - industry_report (B)
"
`;

exports[`AmazonTemplateProcessor Snapshots PR/FAQ Template Snapshots should generate identical PR/FAQ output on multiple runs: pr-faq-deterministic 1`] = `
"---
title: "PR/FAQ — AI-Powered Analytics Platform"
artifact_type: pr_faq
created_at: "2024-01-15T10:30:00.000Z"
inputs_hash: "fixed-seed-hash-12345abcdef67890"
profile: "amazon"
confidence:
  total: 84
  breakdown: {"evidence":88,"recency":82,"diversity":79,"agreement":91,"coverage":92,"sensitivity":76}
assumptions:
  ids: ["A1","A2","A3","A4"]
  coverage_pct: 92
scenarios:
  pct: 20
  metrics: ["Development Investment","Annual Revenue","Customer Count","ROI","Payback Period"]
paths:
  assumptions_json: "./attachments/assumptions-fixed123.json"
  citations_json: "./attachments/citations-fixed123.json"
  scenarios_json: "./attachments/scenarios-fixed123.json"
---

# PR/FAQ — AI-Powered Analytics Platform

## Press Release

**FOR IMMEDIATE RELEASE**

**AI-Powered Analytics Platform Launches to Transform Mid-Market SaaS Companies Experience**

*Revolutionary solution addresses critical market need with proven ROI*

**North America — [Future Date]** — Today we announced the launch of AI-Powered Analytics Platform, a breakthrough solution designed specifically for Mid-Market SaaS Companies. This innovative platform addresses the critical challenge of struggle with fragmented data insights and manual reporting processes while delivering Significant business value.

"AI-Powered Analytics Platform represents a fundamental shift in how Mid-Market SaaS Companies can Launch AI-Powered Analytics Platform for Mid-Market SaaS Companies," said [Product Leader]. "Our customers will see within 90 days and experience immediate value through our unique approach."

The solution will be available starting [Launch Date] with initial rollout to select customers.

### Why Now

Market conditions are optimal with 84% confidence in our analysis. Key market drivers include:

- Growing demand for efficient solutions
- Technology platform readiness
- Competitive landscape gaps

### Customer Problem

Mid-Market SaaS Companies currently face significant challenges with struggle with fragmented data insights and manual reporting processes. Our research shows:

- 67% report inefficiencies in current processes
- Average time-to-value exceeds 6 months
- Limited integration capabilities with existing systems

### Solution Overview

AI-Powered Analytics Platform provides:


- Core AI-Powered Analytics Platform functionality

- Integrated analytics and reporting

- Seamless user experience


**First Run Experience:** Initial AI-Powered Analytics Platform experience with core functionality

**Key Guardrails:**

- Performance monitoring and alerts

- User feedback collection

- Rollback procedures


### Success Metrics

**North Star Metric:** Monthly Active Users  
**Target:** 10,000 by 2026-03-09

**Leading Indicators:**
- User engagement rate
- Feature adoption
- Customer satisfaction score

## Frequently Asked Questions

### Q1: How does this compare to existing solutions?

Current solutions from Mixpanel, Amplitude, Segment lack key capabilities. Our unique approach provides integrated capabilities that competitors cannot match.

### Q2: What's the expected ROI?

Based on our analysis, customers can expect Significant business value with scenarios ranging from our bear case to bull case projections.

### Q3: How long until customers see value?

Customers typically see initial value within 90 days with full benefits realized within 6 months.

### Q4: What are the main risks?

Key risks include market adoption timing and competitive response. We have mitigation strategies for each identified risk.

### Q5: Why is this the right time?

Platform readiness and market timing create a unique opportunity window. Market conditions and customer readiness align perfectly with our launch timeline.

## Risks & Mitigations

**Market Risk:** Slower than expected adoption  
**Mitigation:** Phased rollout with early customer feedback

**Competitive Risk:** Fast follower response  
**Mitigation:** Strong IP position and first-mover advantage

**Technical Risk:** Integration complexity  
**Mitigation:** Proven architecture and extensive testing

## Evidence Mechanisms

### Assumption Ledger

| ID | Name | Value | Certainty | Sources |
|----|------|-------|-----------|---------|
| A1 | Total Addressable Market | $1.8B | High | 1 |
| A2 | Average Deal Size | 25000 | Medium | 1 |
| A3 | Market Growth Rate | 23 | High | 1 |
| A4 | Customer Churn Rate | 8 | Medium | 1 |

**Coverage:** 92% of claims backed by documented assumptions

### Confidence Score

**Overall Confidence:** 84/100

**Breakdown:**
- Evidence Quality: 88/100
- Data Recency: 82/100
- Source Diversity: 79/100
- Source Agreement: 91/100
- Assumption Coverage: 92/100
- Sensitivity Risk: 76/100

**Explanation:** High-quality evidence with strong source agreement and excellent coverage. Minor concerns around sensitivity to market changes.



### Scenario Range

| Metric | Bear | Base | Bull | Unit |
|--------|------|------|------|------|
| Development Investment | $800K | **$1.2M** | $1.8M | USD |
| Annual Revenue | $2.4M | **$4.2M** | $7.1M | USD |
| Customer Count | 96 | **168** | 284 | customers |
| ROI | 200% | **250%** | 295% | % |
| Payback Period | 18 | **12** | 8 | months |

**Key Sensitivities:**

- Average Deal Size ±20% → Annual Revenue ±18%

- Market Growth Rate ±20% → Customer Count ±22%

- Customer Churn Rate ±20% → ROI ±12%


### Hard Questions


**Q1:** How will the recent economic downturn affect our $1.8B TAM assumption, especially given enterprise budget freezes?  
*Targets: A1, A3 | Severity: critical*

Evidence needed: Q4 2023 enterprise spending data, Updated market research, Customer budget surveys


**Q2:** What if competitors like Mixpanel reduce pricing by 30% to defend market share?  
*Targets: A2 | Severity: important*

Evidence needed: Competitive pricing intelligence, Value proposition differentiation analysis


**Q3:** Can we realistically achieve 8% churn when industry average is 12% for new products?  
*Targets: A4 | Severity: important*

Evidence needed: Customer success benchmarks, Product stickiness analysis, Onboarding effectiveness data



### Citations

1. [Analytics and Business Intelligence Market Forecast 2024-2026](https://research.gartner.com/analytics-market-2024) - industry_report (A)
2. [SaaS Sales Benchmarks Report 2024](https://salesforce.com/saas-benchmarks) - industry_report (A)
3. [IDC Analytics Platform Growth Projections](https://idc.com/analytics-growth-forecast) - research (A)
4. [SaaS Churn Rate Benchmarks by Industry](https://recurly.com/churn-benchmarks) - industry_report (B)
"
`;

exports[`AmazonTemplateProcessor Snapshots Template Data Enrichment Snapshots should generate consistent enriched template data: enriched-template-data 1`] = `
{
  "assumptionIds": [
    "A1",
    "A2",
    "A3",
    "A4",
  ],
  "assumptionTable": "| ID | Name | Value | Certainty | Sources |
|----|------|-------|-----------|---------|
| A1 | Total Addressable Market | $1.8B | High | 1 |
| A2 | Average Deal Size | 25000 | Medium | 1 |
| A3 | Market Growth Rate | 23 | High | 1 |
| A4 | Customer Churn Rate | 8 | Medium | 1 |",
  "citations": [
    {
      "date": "2024-01-01",
      "rating": "A",
      "snippet": "The analytics market is projected to reach $1.8B by 2025 with 23% CAGR",
      "sourceType": "industry_report",
      "title": "Analytics and Business Intelligence Market Forecast 2024-2026",
      "url": "https://research.gartner.com/analytics-market-2024",
    },
    {
      "date": "2023-12-20",
      "rating": "A",
      "snippet": "Mid-market SaaS average deal size ranges from $20K-$30K annually",
      "sourceType": "industry_report",
      "title": "SaaS Sales Benchmarks Report 2024",
      "url": "https://salesforce.com/saas-benchmarks",
    },
    {
      "date": "2024-01-05",
      "rating": "A",
      "snippet": "Analytics platforms showing 23% year-over-year growth in enterprise segment",
      "sourceType": "research",
      "title": "IDC Analytics Platform Growth Projections",
      "url": "https://idc.com/analytics-growth-forecast",
    },
    {
      "date": "2023-11-15",
      "rating": "B",
      "snippet": "Analytics SaaS products average 8-12% monthly churn in first year",
      "sourceType": "industry_report",
      "title": "SaaS Churn Rate Benchmarks by Industry",
      "url": "https://recurly.com/churn-benchmarks",
    },
  ],
  "citationsList": "1. [Analytics and Business Intelligence Market Forecast 2024-2026](https://research.gartner.com/analytics-market-2024) - industry_report (A)
2. [SaaS Sales Benchmarks Report 2024](https://salesforce.com/saas-benchmarks) - industry_report (A)
3. [IDC Analytics Platform Growth Projections](https://idc.com/analytics-growth-forecast) - research (A)
4. [SaaS Churn Rate Benchmarks by Industry](https://recurly.com/churn-benchmarks) - industry_report (B)",
  "compGapSentence": "Current solutions from Mixpanel, Amplitude, Segment lack key capabilities.",
  "competitors": [
    "Mixpanel",
    "Amplitude",
    "Segment",
  ],
  "confidence": {
    "breakdown": {
      "agreement": 91,
      "coverage": 92,
      "diversity": 79,
      "evidence": 88,
      "recency": 82,
      "sensitivity": 76,
    },
    "explanation": "High-quality evidence with strong source agreement and excellent coverage. Minor concerns around sensitivity to market changes.",
    "lowConfidence": false,
    "total": 84,
  },
  "customer": "Mid-Market SaaS Companies",
  "featureName": "AI-Powered Analytics Platform",
  "firstRun": "Initial AI-Powered Analytics Platform experience with core functionality",
  "guardrails": [
    "Performance monitoring and alerts",
    "User feedback collection",
    "Rollback procedures",
  ],
  "hardQuestions": [
    {
      "category": "market",
      "evidenceNeeded": [
        "Q4 2023 enterprise spending data",
        "Updated market research",
        "Customer budget surveys",
      ],
      "evidenceNeededText": "Q4 2023 enterprise spending data, Updated market research, Customer budget surveys",
      "id": 1,
      "question": "How will the recent economic downturn affect our $1.8B TAM assumption, especially given enterprise budget freezes?",
      "severity": "critical",
      "targetAssumptions": [
        "A1",
        "A3",
      ],
      "targetAssumptionsText": "A1, A3",
    },
    {
      "category": "competitive",
      "evidenceNeeded": [
        "Competitive pricing intelligence",
        "Value proposition differentiation analysis",
      ],
      "evidenceNeededText": "Competitive pricing intelligence, Value proposition differentiation analysis",
      "id": 2,
      "question": "What if competitors like Mixpanel reduce pricing by 30% to defend market share?",
      "severity": "important",
      "targetAssumptions": [
        "A2",
      ],
      "targetAssumptionsText": "A2",
    },
    {
      "category": "execution",
      "evidenceNeeded": [
        "Customer success benchmarks",
        "Product stickiness analysis",
        "Onboarding effectiveness data",
      ],
      "evidenceNeededText": "Customer success benchmarks, Product stickiness analysis, Onboarding effectiveness data",
      "id": 3,
      "question": "Can we realistically achieve 8% churn when industry average is 12% for new products?",
      "severity": "important",
      "targetAssumptions": [
        "A4",
      ],
      "targetAssumptionsText": "A4",
    },
  ],
  "inputsHash": "fixed-seed-hash-12345abcdef67890",
  "isoTimestamp": "2024-01-15T10:30:00.000Z",
  "keyAction": "Launch AI-Powered Analytics Platform for Mid-Market SaaS Companies",
  "keyOutcome": "Significant business value",
  "ledger": {
    "assumptions": [
      {
        "category": "market",
        "certainty": "High",
        "id": "A1",
        "impact": "critical",
        "lastChecked": "2024-01-15T10:00:00.000Z",
        "name": "Total Addressable Market",
        "sourceUrls": [
          "https://research.gartner.com/analytics-market-2024",
        ],
        "unit": "USD",
        "value": "$1.8B",
      },
      {
        "category": "financial",
        "certainty": "Medium",
        "id": "A2",
        "impact": "important",
        "lastChecked": "2024-01-10T15:30:00.000Z",
        "name": "Average Deal Size",
        "sourceUrls": [
          "https://salesforce.com/saas-benchmarks",
        ],
        "unit": "USD",
        "value": 25000,
      },
      {
        "category": "market",
        "certainty": "High",
        "id": "A3",
        "impact": "critical",
        "lastChecked": "2024-01-12T09:15:00.000Z",
        "name": "Market Growth Rate",
        "sourceUrls": [
          "https://idc.com/analytics-growth-forecast",
        ],
        "unit": "%",
        "value": 23,
      },
      {
        "category": "financial",
        "certainty": "Medium",
        "id": "A4",
        "impact": "important",
        "lastChecked": "2024-01-08T14:45:00.000Z",
        "name": "Customer Churn Rate",
        "sourceUrls": [
          "https://recurly.com/churn-benchmarks",
        ],
        "unit": "%",
        "value": 8,
      },
    ],
    "backedClaims": 11,
    "coverage_pct": 92,
    "lastUpdated": "2024-01-15T10:00:00.000Z",
    "totalClaims": 12,
  },
  "ledgerCoveragePct": 92,
  "lowConfidence": false,
  "nsDate": "2026-03-09",
  "nsMetric": "Monthly Active Users",
  "nsTarget": "10,000",
  "platformWindowSentence": "Platform readiness and market timing create a unique opportunity window.",
  "problemOneLine": "struggle with fragmented data insights and manual reporting processes",
  "region": "North America",
  "roiTable": "| Scenario | Investment | Revenue | ROI | Confidence |
|----------|------------|---------|-----|------------|
| Bear | $500K | $1.2M | 140% | Low |
| **Base** | **$750K** | **$2.1M** | **180%** | Medium |
| Bull | $1M | $3.5M | 250% | High |",
  "scenarioMetrics": [
    "Development Investment",
    "Annual Revenue",
    "Customer Count",
    "ROI",
    "Payback Period",
  ],
  "scenarioPct": 20,
  "scenarioTable": "| Metric | Bear | Base | Bull | Unit |
|--------|------|------|------|------|
| Development Investment | $800K | **$1.2M** | $1.8M | USD |
| Annual Revenue | $2.4M | **$4.2M** | $7.1M | USD |
| Customer Count | 96 | **168** | 284 | customers |
| ROI | 200% | **250%** | 295% | % |
| Payback Period | 18 | **12** | 8 | months |",
  "scenarios": {
    "elasticities": [
      {
        "assumption": "Average Deal Size",
        "assumptionChange": "±20%",
        "outcomeChange": "±18%",
        "outcomeMetric": "Annual Revenue",
        "sensitivity": 0.9,
      },
      {
        "assumption": "Market Growth Rate",
        "assumptionChange": "±20%",
        "outcomeChange": "±22%",
        "outcomeMetric": "Customer Count",
        "sensitivity": 1.1,
      },
      {
        "assumption": "Customer Churn Rate",
        "assumptionChange": "±20%",
        "outcomeChange": "±12%",
        "outcomeMetric": "ROI",
        "sensitivity": 0.6,
      },
    ],
    "keyDrivers": [
      {
        "assumption": "Average Deal Size",
        "assumptionId": "A2",
        "description": "Primary revenue driver with high sensitivity",
        "impact": 0.9,
      },
      {
        "assumption": "Market Growth Rate",
        "assumptionId": "A3",
        "description": "Key market expansion factor",
        "impact": 1.1,
      },
    ],
    "scenarios": {
      "base": [
        {
          "base": "$1.2M",
          "bear": "$800K",
          "bull": "$1.8M",
          "metric": "Development Investment",
          "unit": "USD",
        },
        {
          "base": "$4.2M",
          "bear": "$2.4M",
          "bull": "$7.1M",
          "metric": "Annual Revenue",
          "unit": "USD",
        },
        {
          "base": "168",
          "bear": "96",
          "bull": "284",
          "metric": "Customer Count",
          "unit": "customers",
        },
        {
          "base": "250%",
          "bear": "200%",
          "bull": "295%",
          "metric": "ROI",
          "unit": "%",
        },
        {
          "base": "12",
          "bear": "18",
          "bull": "8",
          "metric": "Payback Period",
          "unit": "months",
        },
      ],
      "bear": [
        {
          "base": "$1.2M",
          "bear": "$800K",
          "bull": "$1.8M",
          "metric": "Development Investment",
          "unit": "USD",
        },
        {
          "base": "$4.2M",
          "bear": "$2.4M",
          "bull": "$7.1M",
          "metric": "Annual Revenue",
          "unit": "USD",
        },
        {
          "base": "168",
          "bear": "96",
          "bull": "284",
          "metric": "Customer Count",
          "unit": "customers",
        },
        {
          "base": "250%",
          "bear": "200%",
          "bull": "295%",
          "metric": "ROI",
          "unit": "%",
        },
        {
          "base": "12",
          "bear": "18",
          "bull": "8",
          "metric": "Payback Period",
          "unit": "months",
        },
      ],
      "bull": [
        {
          "base": "$1.2M",
          "bear": "$800K",
          "bull": "$1.8M",
          "metric": "Development Investment",
          "unit": "USD",
        },
        {
          "base": "$4.2M",
          "bear": "$2.4M",
          "bull": "$7.1M",
          "metric": "Annual Revenue",
          "unit": "USD",
        },
        {
          "base": "168",
          "bear": "96",
          "bull": "284",
          "metric": "Customer Count",
          "unit": "customers",
        },
        {
          "base": "250%",
          "bear": "200%",
          "bull": "295%",
          "metric": "ROI",
          "unit": "%",
        },
        {
          "base": "12",
          "bear": "18",
          "bull": "8",
          "metric": "Payback Period",
          "unit": "months",
        },
      ],
    },
    "sensitivityPct": 20,
  },
  "shortHash": "fixed123",
  "solutionBullets": [
    "Core AI-Powered Analytics Platform functionality",
    "Integrated analytics and reporting",
    "Seamless user experience",
  ],
  "timeToValue": "within 90 days",
  "topAssumptionIds": "A1, A2, A3",
  "topSensitivities": "- Average Deal Size ±20% → Annual Revenue ±18%
- Market Growth Rate ±20% → Customer Count ±22%
- Customer Churn Rate ±20% → ROI ±12%",
  "whyNowSentence": "Market conditions are optimal with 84% confidence in our analysis.",
}
`;

exports[`AmazonTemplateProcessor Snapshots Template Validation Snapshots should validate Decision One-Pager template structure: decision-onepager-validation 1`] = `
{
  "errors": [],
  "isValid": true,
  "missingSections": [],
  "missingVariables": [],
}
`;

exports[`AmazonTemplateProcessor Snapshots Template Validation Snapshots should validate PR/FAQ template structure: pr-faq-validation 1`] = `
{
  "errors": [],
  "isValid": true,
  "missingSections": [],
  "missingVariables": [],
}
`;
